# billy

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-image.yml
billy/: __main__.py  billy.py  db_manager.py  db_types.py  main.py  multigpAPI.py  ollama.py  requirements.txt  webapi.py
billy/api/: __init__.py  client.py  multigp_api.py  ollama.py
billy/database/: __init__.py  managers.py  objects.py
